prototype/manifests/online-boutique/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-boutique
  labels:
    istio-injection: enabled      # Istio auto-injects sidecar proxies into every pod
